--- a/style.css
+++ b/style.css
@@ -1,40 +1,35 @@
-/*-- Jonas Styles
+/*-- Jonas Stalk
 * GPL, Emily Fountain 2016
 --*/
 /*-- Color Scheme --/
-* red: DC3522
-* tan: D9CB9E
-* gray: 374140
-* dkgray: 2A2C2B
-* black: 1E1E20
-* ltgray-link: 788E8B
-* ltgreen-hover: 4D8E87
-* dkgreen-visited: 315B56
-* gray-active: 374140
-* ltgreen-focus: B8DAD7
-* white-bkgrnd: D8FFFB
+* purple: 634271
+* light gray: 2a2a2a
+* gray: 2d2d2d
+* black: 000000
+
 --*/
 /*-- General Styles --*/
 body {
-  font-family: Lato, Helvetica, Arial, sans-serif;
+  font-family: 'Hind Mandurai', Helvetica, sans-serif;
   font-weight: 300;
   font-size: 18px;
   margin:0;
   padding: 0;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Secular One', sans-serif;
-  padding-top: 16px;
+  font-family: 'Raleway', sans-serif;
+  padding-top: 0px;
 }
 h1 {
-  font-size: 40px;
+  font-size: 60px;
 }
 h2 {
   font-size: 32px;rem;
 }
 h1.site-title {
-  font-size: 52px;
-  color: #DC3522;
+  font-size: 100px;
+  color: #2b2b2b;
+
 }
 p:last-child {
   padding-bottom: 12px;
@@ -42,7 +37,8 @@ p:last-child {
 header {
   padding: 0 18%;
   text-align: center;
-  padding-bottom: 28px
+  padding-top: 20px;
+  padding-bottom: 20px
 }
 section {
   margin: 0;
@@ -59,9 +55,10 @@ section ul {
   margin: 0 0;
 }
 section img {/*-- Makes section images responsive --*/
-  width: 100%;
+  width: 50%;
   height: auto;
 }
+
 footer p {
   margin: 0 0;
   padding-top: 12px;
@@ -69,36 +66,15 @@ footer p {
 }
 /*-- Link Styles --*/
 a:link {
-  color:#788E8B;
+  color:#634271;
   font-weight: 400;
 }
-a:visited {
-  color: #315B56;
-}
+
 a:hover {
-  color: #4D8E87;
+  color: #ffffff;
 }
-a:active {
-  background-color: #374140;
-  color: #2A2C2B;
-}
+
 /*-- Nav Styles --*/
-.social-nav ul {
-  list-style-type: none;
-  margin-left: -40px;
-}
-.social-nav ul li {
-  display: inline;
-  padding-left: 20px;
-  opacity: .75;
-}
-.social-nav ul li:hover {
-  opacity: 1;
-}
-.social-nav ul li a img {
-  width: 32px;
-  height: auto;
-}
 .inline {
   display: inline;
 }
@@ -108,31 +84,55 @@ img.inline {
 }
 /*-- Section Styles --*/
 header {
-  background-color: #1E1E20;
+  background-color: #ababab;
+  background-repeat: no-repeat;
+  background-size:cover;
+  border-bottom: 6px solid #634271;
 }
-#intro {
-  background-color: #b58900;
+
+#imagelarge{
+  background-image: url(pics/header.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 600px;
+border-bottom: 6px solid #634271;
 }
-#intro p {
+#intro{
+  background-color: #2b2b2b;
+  text-align: center;
+  color: #ababab;
+  font-size:  25px;
+}
+#end {
+  background-color: #634271;
+}
+#end p {
   font-size: 28px;
+  color: #ffffff;
 }
 #gallery {
-  background-color: #374140;
-  color: #D9CB9E;
+  background-color: #ababab;
+  color: #2b2b2b;
 }
-#resources {
-  background-color: #D8FFFB;
-  color: #2A2C2B;
+img{
+  padding:3px;
+   border:2px solid #021a40;}
 }
 #timeline ul {
   list-style-type: none;
+
+
 }
-#contact {
-  background-color: #374140;
-  color: #D9CB9E;
+#timeline{
+  background-color: #2b2b2b;
+  text-align: left;
+  color: #ababab;
+  font-size:  25px;
+  border-bottom: 6px solid #634271;
 }
+
 #gallery p {
-  border-bottom: 2px solid #D9CB9E;
+
 }
 /*-- Footer Styles --*/
 footer {
